--- a/package.json
+++ b/package.json
@@ -5,11 +5,32 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch"
   },
   "dependencies": {
+    "@types/jest": "^25.2.1",
+    "babel-jest": "^25.5.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme": "^3.11.0",
+    "firebase-admin": "^8.11.0",
+    "firebase": "^7.14.2",
     "next": "9.3.6",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react": "16.13.1"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^10.0.3",
+    "@types/node": "^13.13.4",
+    "@types/react": "^16.9.34",
+    "jest": "^25.5.0",
+    "react-test-renderer": "^16.13.1",
+    "typescript": "^3.8.3"
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "semi": false,
+    "trailingComma": "es5"
   }
 }
